--- a/Einstein/manifest.json
+++ b/Einstein/manifest.json
@@ -10,7 +10,8 @@
         "https://ca116.computing.dcu.ie/einstein/task*",
         "https://ca116.computing.dcu.ie/einstein/graph*",
         "https://ca116.computing.dcu.ie/einstein/report*"
-        "https://ca116.computing.dcu.ie/0*"
+        "https://ca116.computing.dcu.ie/0*",
+        "
       ],
       "js": [
         "einstein.js"
@@ -18,3 +19,4 @@
     }
   ]
 }
+#test
